<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddFragment"
    android:layout_marginHorizontal="20dp">

    <TextView
        android:id="@+id/nameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/itemNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameTitle"
        android:inputType="text"/>

    <TextView
        android:id="@+id/quantityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity_text"
        app:layout_constraintTop_toBottomOf="@id/itemNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/itemquantityEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/quantityTitle"
        android:inputType="number"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/itemquantityEditText">
        <RadioButton android:id="@+id/radioFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_radio"
            android:checked="true"/>
        <RadioButton android:id="@+id/radioDrink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drink_radio" />
        <RadioButton android:id="@+id/radioHealth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heatlh_radio" />
        <RadioButton android:id="@+id/radioHouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/house_radio" />
    </RadioGroup>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/save_button"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/cancel_button"
        android:textColor="#FF0000"
        android:backgroundTint="@color/white"/>



</androidx.constraintlayout.widget.ConstraintLayout>